# Repaso-1erParcial

./: CMakeLists.txt  README.md
ED/: Lista.h  Nodo.h  Pila.h  main.cpp
Ej_01/: eliminaListaPorPila.h  main.cpp
Ej_02/: main.cpp
Ej_03/: main.cpp
Ej_04/: main.cpp
